# monkeys-audio

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  autogen.sh  configure  configure.ac  configure.in  strip_yasm_args.sh
man/: Makefile.am  mac.1
src/: License.htm  Makefile.am  Makefile.in
src/Console/: Console.cpp  Makefile.am  Makefile.in
src/Examples/: Makefile.in
src/Examples/Analyze/: Makefile.in
src/Examples/Analyze/Sample1/: Makefile.am  Makefile.in  Sample1.cpp
src/MACLib/: APECompress.cpp  APEDecompress.cpp  APEDecompress.h  APEInfo.cpp  APEInfo.h  APELink.cpp  APESimple.cpp  APETag.cpp  BitArray.cpp  MACLib.h  MACProgressHelper.cpp  MD5.cpp  MD5.h  Makefile.am  Makefile.in  NNFilter.cpp  NNFilter.h  Prepare.cpp  UnBitArray.cpp  WAVInputSource.cpp  WAVInputSource.h
src/MACLib/Assembly/: Assembly.h  Makefile.am  Makefile.in  common.cpp  x86_64_mmx.asm  x86_mmx.asm
src/Shared/: All.h  CircleBuffer.cpp  GlobalFunctions.cpp  ID3Genres.h  Makefile.am  Makefile.in  NoWindows.h  SmartPtr.h  StdLibFileIO.h  WinFileIO.cpp  WinFileIO.h  config.h  config.h.in
